# Local_micro_machine

./: .gitmodules  CMakeLists.txt  README.md
game/: CMakeLists.txt
game/include/: camera.h  car_game_manager.h  check.h  client_interface.h  const.h  field.h  game_bounds.h  game_state.h  network.h  online_client.h  player_control.h  rendering_system.h  tilemap.h
game/src/: camera.cc  car_game_manager.cc  client_interface.cc  field.cc  network.cc  player_control.cc  tilemap.cc
game_api/: CMakeLists.txt
game_api/include/: client_game_tuning.h  playground.h  resource_loader.h
game_api/src/: playground.cc  resource_loader.cc
include/: const.h
main/: client.cc  network_test.cc  server.cc
